# confmodel

./: CMakeLists.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml  general_report.yml  large_change_request.yml  large_impact_radius.yml  medium_impact_radius.yml  special_confmodel_form.yml  test.yml
apps/: list_apps.cxx
cmake/: confmodelConfig.cmake.in
docs/: README.md  schema.view
include/confmodel/: DisabledResources.hpp  confmodelIssues.hpp  disabled-components.hpp  test_circular_dependency.hpp  util.hpp
pybindsrc/: dal_methods.cpp
schema/confmodel/: dummy_resource.schema.xml  dunedaq.schema.xml
src/: DisabledResources.cpp  ResourceHolder.cpp  dalMethods.cpp  disabled-components.cpp  test_circular_dependency.cpp  test_circular_dependency.hpp
test/apps/: disable_test.cxx  jsonable_test.cxx
unittest/: DisabledResource_test.cxx
